--- a/src/routes/Addons/AddonPlaceholder/AddonPlaceholder.less
+++ b/src/routes/Addons/AddonPlaceholder/AddonPlaceholder.less
@@ -1,5 +1,5 @@
 @placeholder-opacity: 0.1;
-@logo-size: 5rem;
+@logo-size: 4rem;
 
 .placeholder-pill(@width: 100%, @height: 1.3rem) {
     background-color: var(--primary-foreground-color);
@@ -27,7 +27,7 @@
 
     .logo-container {
         flex: none;
-        margin: 0 auto 1rem;
+        margin: 0 auto 0.75rem;
         .placeholder-logo(@logo-size);
     }
 
@@ -36,19 +36,19 @@
         display: flex;
         flex-direction: column;
         align-items: center;
-        gap: 0.4rem;
-        margin-bottom: 1rem;
+        gap: 0.3rem;
+        margin-bottom: 0.75rem;
 
         .placeholder-pill:nth-child(1) {
             .placeholder-pill(60%);
         }
 
         .placeholder-pill:nth-child(2) {
-            .placeholder-pill(40%, 0.9rem);
+            .placeholder-pill(40%, 0.8rem);
         }
 
         .placeholder-pill:nth-child(3) {
-            .placeholder-pill(80%, 0.9rem);
+            .placeholder-pill(80%, 0.8rem);
         }
     }
 
@@ -56,8 +56,8 @@
         flex: none;
 
         .placeholder-pill {
-            .placeholder-pill(100%, 2.75rem);
-            border-radius: 2.75rem;
+            .placeholder-pill(100%, 2.5rem);
+            border-radius: 2.5rem;
         }
     }
 }
